[gd_scene load_steps=7 format=3 uid="uid://b3gqqjhsbh8cq"]

[ext_resource type="Theme" uid="uid://bbuhj2nojku5d" path="res://addons/DVs_behavior_tree/debug/debugger_ui_theme.tres" id="1_fc1cr"]
[ext_resource type="Script" path="res://addons/DVs_behavior_tree/debug/debugger_ui.gd" id="2_2bslt"]
[ext_resource type="Texture2D" uid="uid://ctm2s86c6624a" path="res://addons/DVs_behavior_tree/icons/debugger/center_view.svg" id="3_ofwat"]
[ext_resource type="Texture2D" uid="uid://xpbm4i3uc45e" path="res://addons/DVs_behavior_tree/icons/debugger/blackboard.svg" id="3_tp11h"]
[ext_resource type="Texture2D" uid="uid://blie66vwrsciu" path="res://addons/DVs_behavior_tree/icons/debugger/sort.svg" id="3_uybli"]
[ext_resource type="Texture2D" uid="uid://dv516rpxoagnu" path="res://addons/DVs_behavior_tree/icons/debugger/close.svg" id="3_ylehu"]

[node name="DebuggerUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fc1cr")
script = ExtResource("2_2bslt")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="TreesMenu" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/TreesMenu"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/TreesMenu/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TreesMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sort" type="MenuButton" parent="HSplitContainer/TreesMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_uybli")
flat = false
item_count = 2
popup/item_0/text = "By Scene"
popup/item_1/text = "By Instance Time"
popup/item_1/id = 1

[node name="Title" type="Label" parent="HSplitContainer/TreesMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Behavior Tree Instances"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/TreesMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/TreesMenu/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BlackboardData" type="PanelContainer" parent="HSplitContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/BlackboardData"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Empty" type="Label" parent="HSplitContainer/BlackboardData/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.686275, 0.615686, 0.85098, 1)
theme_override_font_sizes/font_size = 25
text = "(Empty)"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/BlackboardData/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Blackboard Name"

[node name="Close" type="Button" parent="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("3_ylehu")

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TreeGraph" type="Panel" parent="HSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphContainer" type="Control" parent="HSplitContainer/TreeGraph"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NoSelectedTree" type="Label" parent="HSplitContainer/TreeGraph"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.686275, 0.615686, 0.85098, 1)
theme_override_font_sizes/font_size = 26
text = "No Behavior Tree Selected."
horizontal_alignment = 1

[node name="OptionsPanel" type="MarginContainer" parent="HSplitContainer/TreeGraph"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TreeGraph/OptionsPanel"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CenterView" type="Button" parent="HSplitContainer/TreeGraph/OptionsPanel/HBoxContainer"]
layout_mode = 2
text = "Center View"
icon = ExtResource("3_ofwat")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="OpenGlobalBB" type="Button" parent="HSplitContainer/TreeGraph/OptionsPanel/HBoxContainer"]
layout_mode = 2
text = "Global Blackboard"
icon = ExtResource("3_tp11h")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="BlackboardUpdateTimer" type="Timer" parent="."]

[connection signal="pressed" from="HSplitContainer/BlackboardData/MarginContainer/VBoxContainer/HBoxContainer/Close" to="." method="_on_blackboard_panel_close_pressed"]
[connection signal="gui_input" from="HSplitContainer/TreeGraph" to="." method="_on_graph_panel_gui_input"]
[connection signal="pressed" from="HSplitContainer/TreeGraph/OptionsPanel/HBoxContainer/CenterView" to="." method="_on_center_view_pressed"]
[connection signal="pressed" from="HSplitContainer/TreeGraph/OptionsPanel/HBoxContainer/OpenGlobalBB" to="." method="_on_open_global_blackboard_pressed"]
[connection signal="timeout" from="BlackboardUpdateTimer" to="." method="_on_blackboard_update_timer_timeout"]
